manifests/employee-dir.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emp-dir-ingress
  labels:
    app.kubernetes.io/name: emp-dir-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

    # CORS Configuration
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, Accept, Origin, User-Agent, Cache-Control, Keep-Alive"
    nginx.ingress.kubernetes.io/cors-max-age: "86400"

    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   add_header Origin-Agent-Cluster "?0" always;
spec:
  ingressClassName: nginx
  rules:
  - host: employe.manojm.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: employee-dir
            port: 
              name: emp-port
